syntax = "proto3";

import "google/protobuf/duration.proto";

option go_package = "github.com/Snowflake-Labs/sansshell/network";

package Network;

// The Network service definition
service Network {
  // Check TCP Connectivity
  rpc TCPCheck(TCPCheckRequest) returns (TCPCheckReply) {}
}

// TCP Check describes the request to make check of tcp connectivity check
message TCPCheckRequest {
  // The hostname to check
  string hostname = 1;
  // The port to check
  uint32 port = 2;
  // The timeout duration
  google.protobuf.Duration timeout = 3;
}

// TCPCheckReply describes the result of a rpc
message TCPCheckReply {
  bool ok = 1;
  optional string fail_reason = 2;
}